TDM-132 unify cache specification